Fix legend going behind hybrid thumbnails

--- a/scss/map.scss
+++ b/scss/map.scss
@@ -76,6 +76,11 @@ $sqrt2: 1.4142135;
   font-size: 13px;
   padding: 8px 12px;
   box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.3);
+
+  max-width: 55vw;
+  @media screen and (max-width: 840px) {
+    max-width: none;
+  }
 }
 
 .siftr-map-legend-tag {
